Starting to implement parameter passing
git-svn-id: https://phemto.svn.sourceforge.net/svnroot/phemto/trunk@33 689550c6-99b5-42a6-b8d6-a86e191e286b

--- a/TODO
+++ b/TODO
@@ -5,8 +5,7 @@ it just illustrates the direction of the project.
 
 In priority order...
 --------------------
-* Add test cases for named parameters
-* Add test cases for unnamed parameters
 * Write a Singleton lifecycle.
 * Add parameters to Reused lifecycle.
 * Add parameters to Singleton lifecycle.
+* Can fill dependencies with explicit values
